@@ -4,7 +4,8 @@ Revision history for Graphics-Primitive
   - Use Scene::Graph
   - Remove use of Moose in Graphics::Primitive package (not the whole thing, 
     just that one package, since it has nothing in it)
-  - Use MooseX::Storage::Deferred
+  - Use MooseX::Storage::Deferred, removing dependency on JSON::Any
+  - Use MooseX::Types rather than defining types in the class
 
 0.48    December 24th, 2009
   - Add _draw_arc to Driver's require
